# thumbnail-generation-api

./: .env.template  .gitignore  .gitlab-ci.yml  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: deploy.yml  on_merge_request.yml  publish-production.yml  publish-staging.yml
api/: Dockerfile  config.py  dependencies.py  exceptions.py  main.py  morpho_img.py  requirements.txt  settings.py  trace_img.py  user.py  util.py
api/api/: config.py  exceptions.py  main.py  morpho_img.py  trace_img.py
api/api/router/: generate.py
api/core/: api.py  enum.py
api/http/: entity_core.py
api/models/: common.py  enums.py  soma.py
api/router/: generate.py  health.py  swc.py
api/router/core/: __init__.py  ephys.py  model_trace.py  morphology.py  simulation.py
api/services/: morpho_img.py  nexus.py  simulation_img.py  trace_img.py
api/tests/: test_dependencies.py
api/tools/: plot_ephys.py  plot_morphology.py
api/utils/: common.py  logger.py  trace_img.py
nginx/: nginx.conf
nmv/interface/cli/: soma_reconstruction.py
nmv/options/: neuromorphovis_options.py
server/: Dockerfile  nginx.conf
tests/: conftest.py  test_dependencies.py  utils.py
tests/fixtures/: nexus.py  utils.py
tests/fixtures/data/: morphology.swc  simulation_config.json
tests/previews/: conftest.py  test_morphology_preview.py
tests/test_router/: test_generate.py
tests/test_services/: test_morpho_img.py  test_nexus.py  test_trace_img.py
tests/test_utils/: test_trace_img.py
