[tool.poetry]
name = "thumbnail_generation_api"
version = "0.6.1"
description = "Rest API to generate thumbnails"
authors = ["Blue Brain Project, EPFL"]
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = { version = "^0.112.1", extras = ["standard"] }
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
PyJWT = "^2.8.0"
pytest = "^8.3.2"
neurom = "^4.0.2"
matplotlib = "^3.7.4"
requests = "^2.32.0"
python-dotenv = "^1.0.0"
h5py = "^3.11.0"
numpy = "^2.1.0"
python-multipart = "^0.0.9"
pydantic = "^2.7.1"
pillow = "^10.3.0"
httpx = "^0.27.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.13.0"}
pydantic-settings = "^2.4.0"
plotly = "5.23.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
pylint = "^3.0.2"
ruff = "^0.6.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.FORMAT]
max-line-length = 120
good-names = ["version_template"]
disable = ["R0903"]

[tool.pylint.MASTER]
extension-pkg-whitelist = ["pydantic"]

[tool.black]
line-length = 120
